--- a/expose/references.bib
+++ b/expose/references.bib
@@ -8,18 +8,22 @@
 }
 
 @misc{mchprs,
-  author = {MCHPR Team},
-  title = {Minecraft High-Performance Redstone Server},
-  year = {2020},
+  author = {StackDoubleFlow and MCHPR Team},
+  license = {MIT},
+  title = {MCHPRS: Minecraft High-Performance Redstone Server},
+  year = {2025},
+  version = {0.5.1},
   url = {https://github.com/MCHPR/MCHPRS},
 }
 
 @misc{logisimevolution,
-  author = {Logisim Evolution Community},
-  title = {Logisim Evolution: Digital Logic Design and Simulation},
-  year = {2014},
+  author = {Burch, Carl and Kluter, Theo and Maehne, Torsten and Walsh, Kevin and Hutchens, David H. and Orlowski, Marcin and Niget, Tom and Berman, Moshe and Cruz Franqueira, Theldo},
+  license = {GPL-3.0},
+  title = {{Logisim-evolution}},
   url = {https://github.com/logisim-evolution/logisim-evolution},
-  note = {Open-source digital circuit simulator with VHDL component specification}
+  version = {3.9.0},
+  note = {Open-source digital circuit simulator with VHDL code generation},
+  year = {2024}
 }
 
 @misc{mchprsroc,
@@ -28,4 +32,14 @@
   year = {2025},
   url = {https://github.com/zwzollers/MCHPRS-RoC},
   note = {Redstone compiler targeting Cyclone V FPGAs with Quartus toolchain}
+}
+
+@misc{fpgaaccelsurvey,
+  author = {Zhihong You and Zihan Zhou and Jiajun Fan and Rui Zhang},
+  title = {Acceleration for Deep Reinforcement Learning using Parallel and Distributed Computing: A Survey},
+  year = {2024},
+  eprint = {2411.05614},
+  archivePrefix = {arXiv},
+  primaryClass = {cs.DC},
+  url = {https://arxiv.org/abs/2411.05614}
 }
